alignment fix

--- a/web.css
+++ b/web.css
@@ -55,6 +55,7 @@ body, h1, h2, p, ul, li {
 }
 
 /* mobile */
+
 @media screen and (max-width: 1023px) {
     .container {
         flex-direction: column;
@@ -67,7 +68,6 @@ body, h1, h2, p, ul, li {
 
     .wrapper2 {
         width: 80%;
-        text-align: center;
     }
 
     .left-caption,
@@ -81,14 +81,20 @@ body, h1, h2, p, ul, li {
         font-size: 1.3em;
     }
 }
+
 /*
 @media screen and (min-width: 641px) and (max-width: 1023px) {
     .container {
-        flex-wrap: wrap;
+        flex-direction: column;
     }
     
     .wrapper {
-        flex: 0 0 calc(50% - 20px);
+        width: 80%;
+        text-align: center;
+    }
+
+    .container page {
+        flex-wrap: wrap;
     }
 
     .wrapper2 {
@@ -111,8 +117,16 @@ body, h1, h2, p, ul, li {
     .container {
         flex-wrap: wrap;
     }
+
+    .container page {
+        flex-wrap: wrap;
+    }
     
     .wrapper {
+        flex: 0 0 0 calc(50% - 20px);
+    }
+
+    .wrapper2 {
         flex: 0 0 0 calc(50% - 20px);
     }
 }
